[package]
name = "pf_age_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pf_age_third_party = {path="../pf_age_third_party"}
pf_age_ndk = {path = "../pf_age_ndk"}
bevy ={path="../../bevy"}
raw-window-handle = "0.4.2"
