[package]
name = "pf_age_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pf_age_macro = {path = "../pf_age_macro"}
pf_age_app = {path= "../pf_age_app"}
pf_age_third_party = {path="../pf_age_third_party"}

[package.metadata.android]
# Specifies the array of targets to build for.
#build_targets = [  "aarch64-linux-android", "x86_64-linux-android","i686-linux-android" ]
build_targets = [  "i686-linux-android" ]


[[example]]
name="simple_output"
crate-type=["cdylib"]
