[package]
name = "pf_age_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0.60", features = ["full"] }
quote="1.0.8"
pf_age_third_party = {path="../pf_age_third_party"}
