[package]
name = "pf_age_third_party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger="0.10.1"
log="0.4.14"
shrev = "0.8.2"
egl = { features=["dynamic"],package="khronos-egl",git="https://github.com/pigfall/khronos-egl",branch="tzz_dev_base_on_4.1.0"}
glow = {git="https://github.com/pigfall/glow",branch="tzz_dev_base_on_v0.11.1"}
libc = "0.2.84"

